# math_parser

./: CMakeLists.txt  README.md  example  example.cpp  math_formula.hpp  settings.ini  tests.cpp
